# ollama-playground

./: README.md  basic.py  pyproject.toml  rag.py  requirements.txt
