[tool.poetry]
name = "ollama-playground"
version = "0.1.0"
description = "Experiments with Ollama"
authors = ["John Rofrano <rofrano@us.ibm.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.9.1"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anyio = "4.2.0"
asgiref = "3.7.2"
async-timeout = "4.0.3"
attrs = "23.2.0"
backoff = "2.2.1"
bcrypt = "4.1.2"
beautifulsoup4 = "4.12.2"
cachetools = "5.3.2"
certifi = "2023.11.17"
charset-normalizer = "3.3.2"
chroma-hnswlib = "0.7.3"
chromadb = "0.4.21"
click = "8.1.7"
coloredlogs = "15.0.1"
dataclasses-json = "0.6.3"
deprecated = "1.2.14"
exceptiongroup = "1.2.0"
fastapi = "0.108.0"
filelock = "3.13.1"
flatbuffers = "23.5.26"
frozenlist = "1.4.1"
fsspec = "2023.12.2"
google-auth = "2.26.0"
googleapis-common-protos = "1.62.0"
grpcio = "1.60.0"
h11 = "0.14.0"
httptools = "0.6.1"
huggingface-hub = "0.20.1"
humanfriendly = "10.0"
idna = "3.6"
importlib-metadata = "6.11.0"
importlib-resources = "6.1.1"
jsonpatch = "1.33"
jsonpointer = "2.4"
kubernetes = "28.1.0"
langchain = "0.0.353"
langchain-community = "0.0.7"
langchain-core = "0.1.4"
langchainhub = "0.1.14"
langsmith = "0.0.77"
marshmallow = "3.20.1"
mmh3 = "4.0.1"
monotonic = "1.6"
mpmath = "1.3.0"
multidict = "6.0.4"
mypy-extensions = "1.0.0"
numpy = "1.26.3"
oauthlib = "3.2.2"
onnxruntime = "1.16.3"
opentelemetry-api = "1.22.0"
opentelemetry-exporter-otlp-proto-common = "1.22.0"
opentelemetry-exporter-otlp-proto-grpc = "1.22.0"
opentelemetry-instrumentation = "0.43b0"
opentelemetry-instrumentation-asgi = "0.43b0"
opentelemetry-instrumentation-fastapi = "0.43b0"
opentelemetry-proto = "1.22.0"
opentelemetry-sdk = "1.22.0"
opentelemetry-semantic-conventions = "0.43b0"
opentelemetry-util-http = "0.43b0"
overrides = "7.4.0"
packaging = "23.2"
posthog = "3.1.0"
protobuf = "4.25.1"
pulsar-client = "3.4.0"
pyasn1 = "0.5.1"
pyasn1-modules = "0.3.0"
pydantic = "2.5.3"
pydantic-core = "2.14.6"
pypika = "0.48.9"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
pyyaml = "6.0.1"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.0"
soupsieve = "2.5"
sqlalchemy = "2.0.25"
starlette = "0.32.0.post1"
sympy = "1.12"
tenacity = "8.2.3"
tokenizers = "0.15.0"
tqdm = "4.66.1"
typer = "0.9.0"
types-requests = "2.31.0.6"
types-urllib3 = "1.26.25.14"
typing-inspect = "0.9.0"
typing-extensions = "4.9.0"
urllib3 = "1.26.18"
uvicorn = "0.25.0"
uvloop = "0.19.0"
watchfiles = "0.21.0"
websocket-client = "1.7.0"
websockets = "12.0"
wrapt = "1.16.0"
yarl = "1.9.4"
zipp = "3.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
