[tool.poetry]
name = "ollama-playground"
version = "0.1.0"
description = "Experiments with Ollama"
authors = ["John Rofrano <rofrano@us.ibm.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
langchain = "0.0.353"
langchainhub = "0.1.14"
beautifulsoup4 = "4.12.2"
chromadb = "0.4.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
